--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 .env.test.local
 .env.production.local
 
+# Firebase credentials (não commitar credenciais)
+firebase-dados.txt
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
