--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/theme-mermaid": "^3.9.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "firebase": "^12.6.0",
     "prism-react-renderer": "^2.3.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
